--- a/migracion_hol.Rmd
+++ b/migracion_hol.Rmd
@@ -9,7 +9,7 @@ output:
 ---
 
 Librerías
-```{r}
+```{r, warning=FALSE}
 library(dplyr)
 library(data.table)
 library(lubridate)
@@ -22,6 +22,15 @@ Funciones
 ```{r}
 isValidEmail <- function(x) {
         grepl("\\<[A-Z0-9._%+-]+@[A-Z0-9.-]+\\.[A-Z]{2,}\\>", as.character(x), ignore.case=TRUE)
+}
+
+leerArchivo <- function(nombre) {
+        temp <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+        colnames(temp) <- toupper(colnames(temp))
+        if (anyDuplicated(colnames(temp))) {
+             colnames(temp) <- make.unique(colnames(temp) )   
+        }
+        temp
 }
 ```
 
@@ -49,7 +58,7 @@ Leemos el fichero de maestro de candidatos y vamos a ir eliminando candidatos po
 * Primero anonimizados, nombre en blanco, email en blanco, emails con formato inválido
 ```{r}
 nombre <- "datos_originales/01-Candidatos_Datos_Personales.csv"
-candidatos_maestro <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+candidatos_maestro <- leerArchivo(nombre)
 candidatos_maestro <- filter(candidatos_maestro, NOMBRE != "XXXXXX")
 candidatos_maestro <- filter(candidatos_maestro, NOMBRE != "")
 candidatos_maestro <- filter(candidatos_maestro, EMAIL != "")
@@ -102,16 +111,16 @@ becarios_filtro <- c("Naiara Martínez", "Elena Herbosa", "Sara Abad", "Susana G
 #PENDIENTE DETERMINAR SI USAMOS ALGUN CRITERIO MAS PARA DEFINIR QUE UN PROCESO ESTÉ ACTIVO
 #PENDIENTE CRITERIO PARA OFERTAS HOLDING
 nombre <- "datos_originales/19-Procesos_Masivos.csv"
-masivos_maestro <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+masivos_maestro <- leerArchivo(nombre)
 
 nombre <- "datos_originales/20-Procesos_Especialistas.csv"
-especialistas_maestro <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+especialistas_maestro <- leerArchivo(nombre)
 
 nombre <- "datos_originales/21-Procesos_Becarios.csv"
-becarios_maestro <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+becarios_maestro <- leerArchivo(nombre)
 
 nombre <- "datos_originales/37-Ofertas.csv"
-ofertas_maestro <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+ofertas_maestro <- leerArchivo(nombre)
 
 
 procesos_activos <- especialistas_maestro %>%
@@ -148,14 +157,14 @@ print(nrow(procesos_activos))
 Tenemos que extraer los ID de los candidatos asociados a los procesos vivos, independientemente del estado del candidato
 ```{r}
 nombre <- "datos_originales/33-Procesos_Candidatos_Inscritos.csv"
-candidatos_inscritos <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+candidatos_inscritos <- leerArchivo(nombre)
 candidatos_inscritos <- tbl_df(candidatos_inscritos)
 candidatos_procesos_vivos <- candidatos_inscritos %>%
                         filter(ID_PROCESO %in% procesos_activos$ID_PROCESO) %>%
                         select(ID_CANDIDATO)
 #Por si acaso, vamos a ver si existen candidatos adicionales en estos otros ficheros
 nombre <- "datos_originales/35-Procesos_Especialistas_Progreso.csv"
-temp <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+temp <- leerArchivo(nombre)
 candidatos_procesos_vivos <- temp %>%
         filter(ID_PROCESO %in% procesos_activos$ID_PROCESO) %>%
         select(ID_CANDIDATO) %>%
@@ -164,7 +173,7 @@ candidatos_procesos_vivos <- temp %>%
 
 #Por si acaso, vamos a ver si existen candidatos adicionales en estos otros ficheros
 nombre <- "datos_originales/34-Procesos_Becarios_Progreso.csv"
-temp <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+temp <- leerArchivo(nombre)
 candidatos_procesos_vivos <- temp %>%
         filter(ID_PROCESO %in% procesos_activos$ID_PROCESO) %>%
         select(ID_CANDIDATO) %>%
@@ -173,7 +182,7 @@ candidatos_procesos_vivos <- temp %>%
 
 #Por si acaso, vamos a ver si existen candidatos adicionales en estos otros ficheros
 nombre <- "datos_originales/36-Gestion_Bolsa_Masivos.csv"
-temp <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+temp <- leerArchivo(nombre)
 candidatos_procesos_vivos <- temp %>%
         filter(ID_PROCESO %in% procesos_activos$ID_PROCESO) %>%
         select(ID_CANDIDATO) %>%
@@ -182,7 +191,7 @@ candidatos_procesos_vivos <- temp %>%
 
 #Por si acaso, vamos a ver si existen candidatos adicionales en estos otros ficheros
 nombre <- "datos_originales/41-Candidatos_En_Oferta.csv"
-temp <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+temp <- leerArchivo(nombre)
 candidatos_procesos_vivos <- temp %>%
         filter(ID_OFERTA %in% ofertas_activas$REFERENCIA) %>%
         select(ID_CANDIDATO) %>%
@@ -222,7 +231,7 @@ No vamos a cargar los candidatos que  están incorporados como empleados con ant
 ```{r}
 #Tenemos que leer un fichero con la fecha de incorporación de cada candidato. Eso lo tendremos en varios ficheros 
 nombre <- "datos_originales/34-Procesos_Becarios_Progreso.csv"
-becarios_contratados_viejos <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+becarios_contratados_viejos <- leerArchivo(nombre)
 becarios_contratados_viejos <- tbl_df(becarios_contratados_viejos)
 contratados_viejos <- becarios_contratados_viejos %>%
                         filter(ID_CANDIDATO %in% candidatos_maestro$ID_CANDIDATO) %>%
@@ -232,7 +241,7 @@ contratados_viejos <- becarios_contratados_viejos %>%
 
 
 nombre <- "datos_originales/35-Procesos_Especialistas_Progreso.csv"
-especialistas_contratados_viejos <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+especialistas_contratados_viejos <- leerArchivo(nombre)
 especialistas_contratados_viejos <- tbl_df(especialistas_contratados_viejos)
 contratados_viejos <- especialistas_contratados_viejos %>%
                         filter(ID_CANDIDATO %in% candidatos_maestro$ID_CANDIDATO) %>%
@@ -376,10 +385,7 @@ Ahora hay que procesar todos y cada uno de los ficheros CSV de entrada y filtrar
 fileNames <- list.files(path = "datos_originales", pattern="*.csv", full.names=T, recursive=FALSE)
 fileNamesOut <- file.path("temp",list.files(path = "datos_originales", pattern="*.csv", recursive=FALSE))
 for(x in 1:length(fileNames)) {
-        t<-fread(fileNames[x], sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
-        if (anyDuplicated(colnames(t))) {
-             colnames(t) <- make.unique(colnames(t) )   
-        }
+        t<-leerArchivo(fileNames[x])
         if ("ID_PROCESO" %in% colnames(t)) {
                 t <- t %>% filter(ID_PROCESO %in% procesos_activos$ID_PROCESO)
         }
@@ -397,6 +403,8 @@ for(x in 1:length(fileNames)) {
                                 
                 }
         }
+        print(fileNames[x])
+        print(nrow(t))
         fwrite(t,fileNamesOut[x], sep = "~")
         rm(t)
         gc()
@@ -411,7 +419,7 @@ Con los ficheros ya filtrados, los vamos procesando uno a uno y realizando limpi
 fileNames <- list.files(path = "temp", pattern="*.csv", full.names=T, recursive=FALSE)
 fileNamesOut <- file.path("output",list.files(path = "temp", pattern="*.csv", recursive=FALSE))
 for(x in 1:length(fileNames)) {
-        t<-fread(fileNames[x], sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
+        t<-leerArchivo(fileNames[x])
         if (fileNames[x] == "temp/01-Candidatos_Datos_Personales.csv") {
                 t$TELEFONO <- gsub("[^0-9]", "", t$TELEFONO)
                 t$TELEFONO_MOVIL <- gsub("[^0-9]", "", t$TELEFONO_MOVIL)
@@ -427,7 +435,7 @@ for(x in 1:length(fileNames)) {
 
 
 
-Vamos a descargar las fotos y los adjuntos y dejarlos en una carpeta llamada output/fotos y output/adjuntos
+Vamos a descargar las fotos los adjuntos y los informes y dejarlos en una carpeta llamada output/fotos  output/adjuntos y output/informes
 ```{r, eval=FALSE, include=FALSE}
 fotos <- as.character(candidatos_maestro$FOTOGRAFIA)
 ficheros_fotos <- substr(fotos, nchar("http://cdn.epreselec.com/bbva/Fotos/")+1, nchar(fotos))
@@ -439,8 +447,7 @@ for (i in 1:length(ficheros_fotos)) {
 }
 
 nombre <- "temp/17-Candidatos_Otros_Datos_Documentos.csv"
-cvs <- fread(nombre, sep = "~", quote = "", encoding = "UTF-8", stringsAsFactors = TRUE, fill = TRUE, data.table = TRUE)
-documentos <- as.character(cvs$DOCUMENTO) 
+cvs <- leerArchivo(nombre) 
 ficheros_docs <- substr(documentos, nchar("http://cdn.epreselec.com/bbva/Documentos/")+1, nchar(documentos))
 ficheros_docs_out <- paste("output/adjuntos/",ficheros_docs,sep="")
 for (i in 1:length(ficheros_docs)) {
